[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/uiComponents/FlexContainer.gd" type="Script" id=1]
[ext_resource path="res://ui/inventory/BuildRequirementSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/inventory/BuildRequirements.gd" type="Script" id=3]

[node name="BuildRequirements" type="VBoxContainer"]
margin_right = 388.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="BuildingName" type="Label" parent="."]
margin_right = 388.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_colors/font_color = Color( 0.345098, 0.294118, 0.156863, 1 )
text = "Building Name"
align = 1
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 16.0
margin_right = 388.0
margin_bottom = 111.0

[node name="BuildRequirements" type="Container" parent="HBoxContainer"]
margin_right = 324.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="BuildRequirement" parent="HBoxContainer/BuildRequirements" instance=ExtResource( 2 )]
margin_right = 46.0
margin_bottom = 95.0

[node name="BuildRequirement2" parent="HBoxContainer/BuildRequirements" instance=ExtResource( 2 )]
margin_left = 50.0
margin_right = 96.0
margin_bottom = 95.0

[node name="BuildRequirement3" parent="HBoxContainer/BuildRequirements" instance=ExtResource( 2 )]
margin_left = 100.0
margin_right = 146.0
margin_bottom = 95.0

[node name="BuildRequirement4" parent="HBoxContainer/BuildRequirements" instance=ExtResource( 2 )]
margin_left = 150.0
margin_right = 196.0
margin_bottom = 95.0

[node name="BuildRequirement5" parent="HBoxContainer/BuildRequirements" instance=ExtResource( 2 )]
margin_left = 200.0
margin_right = 246.0
margin_bottom = 95.0

[node name="BuildRequirement6" parent="HBoxContainer/BuildRequirements" instance=ExtResource( 2 )]
margin_left = 250.0
margin_right = 296.0
margin_bottom = 95.0

[node name="BuildButtons" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 328.0
margin_right = 388.0
margin_bottom = 95.0
rect_min_size = Vector2( 60, 0 )
custom_constants/separation = 0
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/BuildButtons"]
margin_top = 37.0
margin_right = 60.0
margin_bottom = 57.0
text = "Build"

[connection signal="button_down" from="HBoxContainer/BuildButtons/Button" to="." method="_on_Button_button_down"]
